RESOLVED FIXED227260
[RenderTreeBuilder] ASSERTION FAILED: m_renderer in FloatingObject::renderer()
https://bugs.webkit.org/show_bug.cgi?id=227260
Summary [RenderTreeBuilder] ASSERTION FAILED: m_renderer in FloatingObject::renderer()
alan
Reported 2021-06-22 10:55:08 PDT
Attachments
Patch (8.24 KB, patch)
2021-06-22 11:16 PDT, alan
no flags
alan
Comment 1 2021-06-22 11:16:15 PDT
EWS
Comment 2 2021-06-22 13:26:19 PDT
Committed r279142 (239051@main): <https://commits.webkit.org/239051@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431977 [details].
Note You need to log in before you can comment on or make changes to this bug.